mxslc/tests/data/error/bad_template_1.mxsl
float foo<float, vec2>()
{
    return 6.9;
}

float f = foo<color3>() * 2.0;
